# stunts-web

./: Cargo.toml  README.md  Trunk.toml  index.html
public/: tailwind.css
src/: canvas_renderer.rs  editor_state.rs  lib.rs  main.rs
src/components/: icon.rs  items.rs  layers.rs  login_form.rs  mod.rs  project_browser.rs  project_form.rs  project_list.rs
src/fetchers/: media.rs  mod.rs  projects.rs  users.rs
src/helpers/: media.rs  mod.rs  projects.rs  users.rs  utilities.rs
src/pages/: create_project.rs  home.rs  mod.rs  project.rs  projects.rs
src/shaders/: frag_primary.wgsl  vert_primary.wgsl
