[package]
name = "stunts-web"
version = "0.1.0"
edition = "2021"
authors = ["Alex Goodman <alexthegoodman@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
leptos_meta = { version = "0.7" }
leptos_router = { version = "0.7" }
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3.11.0"
reqwest = { version = "0.12.12", features = ["json"] }
phosphor-leptos = "0.7.0"
rand = "0.8.5"
chrono = { version = "0.4.38", features = ["serde"] }
leptos-use = { version = "0.15.5", features = ["storage"] }
codee = { version = "0.2.0", features = ["json_serde"] }

# utils
# strum = { version = "0.25", features = ["derive", "strum_macros"] }
# strum_macros = "0.25"


[dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
web-sys = { version = "0.3", features = ["Document", "Window"] }


[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
