[package]
name = "stunts-web"
version = "0.1.0"
edition = "2021"
authors = ["Alex Goodman <alexthegoodman@gmail.com>"]

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
leptos_meta = { version = "0.7" }
leptos_router = { version = "0.7" }
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3.11.0"
gloo-net = { version = "0.6.0", features = ["http"] }
phosphor-leptos = "0.7.0"
rand = "0.8.5"
chrono = { version = "0.4.38", features = ["serde"] }
leptos-use = { version = "0.15.5", features = ["storage"] }
codee = { version = "0.2.0", features = ["json_serde"] }
wasm-bindgen-futures = "0.4"
stunts-engine = { path = "D:/projects/common/stunts-engine", version = "0.1.0" }
reactive_stores = "0.1.7"
uuid = { version = "1.13.1", features = ["v4", "js"] }
palette = "0.7.6"
wgpu = "22.1.0"
winit = { version = "0.29.15", features = ["rwh_05"] }
bytemuck = "1.15.0"
undo = "0.51.0"

[dependencies.web-sys]
version = "0.3"
features = [
    "Document",
    "Window",
    "Element",
    "DomRect",
    "HtmlCanvasElement",
    "HtmlSelectElement",
    "Gpu",
    "Storage",
]

[dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
